# omega

./: Cargo.toml  README.md  commands.toml  example.env
src/: commands.rs  extensions.rs  handlers.rs  helpers.rs  macros.rs  main.rs  structures.rs  util.rs
src/commands/: clear.rs  leave.rs  now_playing.rs  play.rs  prelude.rs  queue.rs  remove.rs  skip.rs
src/extensions/: interaction.rs  member.rs
src/handlers/: events.rs  voice.rs
src/helpers/: interaction.rs  member.rs  result.rs
src/structures/: command.rs  queue.rs  responses.rs  utils.rs  voice_handler.rs
src/util/: macros.rs  replies.rs
