[package]
name = "omega"
version = "0.1.0"
authors = ["Vaporox"]
edition = "2021"
description = "The best Discord music bot out there"
repository = "https://github.com/vaporox/omega"
license = "ISC"

[dependencies]
dotenv = "0"
serde_json = "1"
toml = "0"

[dependencies.serenity]
version = "0"
default-features = false
features = ["cache", "client", "gateway", "model", "rustls_backend", "unstable_discord_api"]

[dependencies.songbird]
version = "0"
features = ["builtin-queue"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
