[package]
name = "omega"
version = "0.1.0"
authors = ["Vaporox"]
edition = "2021"
description = "The best Discord music bot out there"
repository = "https://github.com/vaporox/omega"
license = "ISC"
default-run = "omega"

[dependencies]
dotenv = "0.15"
serde_json = "1"
toml = "0.5"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["cache", "client", "gateway", "model", "rustls_backend"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["builtin-queue"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
